--- a/site/src/components/Layout.css
+++ b/site/src/components/Layout.css
@@ -18,9 +18,13 @@
 }
 
 .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #fff;
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    height: 40px;
+    width: auto;
 }
 
 nav ul {
